Transition to HAL

--- a/research/index.html
+++ b/research/index.html
@@ -71,14 +71,15 @@
 	<div class="container pt-4 pb-4">
 		<p class="pb-4">
 			Some publications, roughly in reverse chronological order.<br>
-			For the full list, or if you need a file you can&rsquo;t find, <a href="https://lcgasparri.github.io/contact/">email me</a>.
+			For the full list, or if you need a file you can&rsquo;t find, <a href="https://lcgasparri.github.io/contact/">email me</a>.<br>
+			&lsquo;hal&rsquo; brings you to <a href="https://hal.science/">HAL Open Science</a>.
 		</p>
 
 		<p>
 			<strong>Words, articulations, and utterance plans</strong><br>
 			<em>Philosophy and Phenomenological Research</em><br>
 			<a data-bs-toggle="collapse" href=#words-art aria-expanded="false" role="button" aria-controls=words-art>abstract</a> |
-			AAM under embargo |
+			* |
 			<a href="https://doi.org/10.1111/phpr.70096" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=words-art class=collapse>
@@ -113,7 +114,7 @@
 			<strong>Animal metasemantics</strong><br>
 			<em>Biology &amp; Philosophy</em><br>
 			<a data-bs-toggle="collapse" href=#animal-meta aria-expanded="false" role="button" aria-controls=animal-meta>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/animal-meta.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-05264543" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s10539-025-09993-1" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=animal-meta class=collapse>
@@ -132,7 +133,7 @@
 			<em>Topoi</em><br>
 			w/ <a href="http://gerhard.schaden.free.fr/" target="_blank" rel="noopener">Gerhard Schaden</a><br>
 			<a data-bs-toggle="collapse" href=#slurs-nouns aria-expanded="false" role="button" aria-controls=slurs-nouns>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/slurs-nouns.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-05048819" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s11245-025-10186-4" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=slurs-nouns class=collapse>
@@ -150,7 +151,7 @@
 			<strong>Bare singular names and genericity</strong><br>
 			<em>Journal of Semantics</em><br>
 			<a data-bs-toggle="collapse" href=#bare-names-generics aria-expanded="false" role="button" aria-controls=bare-names-generics>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/bare-names-generics.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-04791894" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1093/jos/ffae017" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=bare-names-generics class=collapse>
@@ -167,7 +168,7 @@
 			<strong>Meaning change you can make</strong><br>
 			<em>Synthese</em><br>
 			<a data-bs-toggle="collapse" href=#meaning-change aria-expanded="false" role="button" aria-controls=meaning-change>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/meaning-change.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-04589410" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s11229-024-04604-0" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=meaning-change class=collapse>
@@ -187,7 +188,7 @@
 			<strong>Inherent and probabilistic naturalness</strong><br>
 			<em>Philosophical Studies</em><br>
 			<a data-bs-toggle="collapse" href=#natural-conventions aria-expanded="false" role="button" aria-controls=natural-conventions>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/natural-conventions.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-04268871" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s11098-023-02070-x" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=natural-conventions class=collapse>
@@ -205,7 +206,7 @@
 			<strong>The first words ever spoken</strong><br>
 			<em>Synthese</em><br>
 			<a data-bs-toggle="collapse" href=#first-word aria-expanded="false" role="button" aria-controls=first-word>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/first-word.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-04100213" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s11229-023-04166-7" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=first-word class=collapse>
@@ -224,7 +225,7 @@
 			<em>Mind &amp; Language</em><br>
 			w/ <a href="https://pierafilip.wixsite.com/pierafilippi" target="_blank" rel="noopener">Piera Filippi</a> et al.<br>
 			<a data-bs-toggle="collapse" href=#notions-arbitrariness aria-expanded="false" role="button" aria-controls=notions-arbitrariness>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/notions-arbitrariness.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03831380" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1111/mila.12443" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=notions-arbitrariness class=collapse>
@@ -242,7 +243,7 @@
 			<em>Biological Reviews</em><br>
 			w/ <a href="https://stuartkwatson.wordpress.com/" target="_blank" rel="noopener">Stuart K. Watson</a> et al.<br>
 			<a data-bs-toggle="collapse" href=#optionality-animals aria-expanded="false" role="button" aria-controls=optionality-animals>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/optionality-animals.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03745755" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1111/brv.12882" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=optionality-animals class=collapse>
@@ -263,7 +264,7 @@
 			<strong>&#346;a&#7749;karan monism and the limits of thought</strong><br>
 			<em>The Monist</em><br>
 			<a data-bs-toggle="collapse" href=#sankaran-monism aria-expanded="false" role="button" aria-controls=sankaran-monism>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/sankaran-monism.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635381" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1093/monist/onab024" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=sankaran-monism class=collapse>
@@ -280,7 +281,7 @@
 			<strong>Proportional dispositional predicates</strong><br>
 			<em>Synthese</em><br>
 			<a data-bs-toggle="collapse" href=#proportions-dispositions aria-expanded="false" role="button" aria-controls=proportions-dispositions>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/proportions-dispositions.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635360" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s11229-021-03336-9" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=proportions-dispositions class=collapse>
@@ -297,7 +298,7 @@
 			<strong>Lexical innovation and the periphery of language</strong><br>
 			<em>Linguistics and Philosophy</em><br>
 			<a data-bs-toggle="collapse" href=#lexical-innovation aria-expanded="false" role="button" aria-controls=lexical-innovation>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/lexical-innovation.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635391v1" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s10988-020-09319-2" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=lexical-innovation class=collapse>
@@ -317,7 +318,7 @@
 			<strong>Semantic supervenience</strong><br>
 			<em>Inquiry</em><br>
 			<a data-bs-toggle="collapse" href=#semantic-supervenience aria-expanded="false" role="button" aria-controls=semantic-supervenience>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/semantic-supervenience.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635386" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1080/0020174X.2021.1930579" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=semantic-supervenience class=collapse>
@@ -336,7 +337,7 @@
 			<em>Synthese</em><br>
 			w/ <a href=https://caphi.univ-nantes.fr/_Michael-Murez_ target="_blank" rel="noopener">Michael Murez</a><br>
 			<a data-bs-toggle="collapse" href=#hearing-meanings aria-expanded="false" role="button" aria-controls=hearing-meanings>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/hearing-meanings.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03281849" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1007/s11229-019-02398-0" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=hearing-meanings class=collapse>
@@ -353,7 +354,7 @@
 			<strong>A pluralistic theory of wordhood</strong><br>
 			<em>Mind &amp; Language</em><br>
 			<a data-bs-toggle="collapse" href=#pluralism-words aria-expanded="false" role="button" aria-controls=pluralism-words>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/pluralism-words.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635397" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1111/mila.12297" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=pluralism-words class=collapse>
@@ -368,7 +369,7 @@
 			<strong>A numeral oddity</strong><br>
 			<em>Journal of Semantics</em><br>
 			<a data-bs-toggle="collapse" href=#numeral-oddity aria-expanded="false" role="button" aria-controls=numeral-oddity>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/numeral-oddity.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635403" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1093/jos/ffz006" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=numeral-oddity class=collapse>
@@ -384,7 +385,7 @@
 			<strong>Pronominal anaphora, coreference, and closed quotation marks</strong><br>
 			<em>Mind &amp; Language</em><br>
 			<a data-bs-toggle="collapse" href=#anaphora-quotation aria-expanded="false" role="button" aria-controls=anaphora-quotation>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/anaphora-quotation.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635408" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1111/mila.12213" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=anaphora-quotation class=collapse>
@@ -400,7 +401,7 @@
 			<strong>Phonetic segments and the organization of speech</strong><br>
 			<em>Philosophy of Science</em><br>
 			<a data-bs-toggle="collapse" href=#phones-speech aria-expanded="false" role="button" aria-controls=phones-speech>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/phones-speech.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635414" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1086/701955" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=phones-speech class=collapse>
@@ -416,7 +417,7 @@
 			<strong>Priority cosmopsychism and the Advaita Ved&amacr;nta</strong><br>
 			<em>Philosophy East and West</em><br>
 			<a data-bs-toggle="collapse" href=#cosmo-advaita aria-expanded="false" role="button" aria-controls=cosmo-advaita>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/cosmo-advaita.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635422" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1353/pew.2019.0002" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=cosmo-advaita class=collapse>
@@ -432,7 +433,7 @@
 			<strong>Originalism about word types</strong><br>
 			<em>Thought</em><br>
 			<a data-bs-toggle="collapse" href=#originalism aria-expanded="false" role="button" aria-controls=originalism>abstract</a> |
-			<a href="https://lcgasparri.github.io/docs/originalism.pdf" target="_blank" rel="noopener">local</a> |
+			<a href="https://hal.science/hal-03635418" target="_blank" rel="noopener">hal</a> |
 			<a href="https://doi.org/10.1002/tht3.202" target="_blank" rel="noopener">doi</a>
 		</p>
 		<div id=originalism class=collapse>
