--- a/research/index.html
+++ b/research/index.html
@@ -70,9 +70,9 @@
 	<!-- Research -->
 	<div class="container pt-4 pb-4">
 		<p class="pb-4">
-			Some publications, roughly in reverse chronological order.<br>
+			<em>Some publications, roughly in reverse chronological order.<br>
 			For the full list, or if you need a file you can&rsquo;t find, <a href="https://lcgasparri.github.io/contact/">email me</a>.<br>
-			&lsquo;hal&rsquo; brings you to <a href="https://hal.science/">HAL Open Science</a>.
+			&lsquo;hal&rsquo; brings you to <a href="https://hal.science/" target="_blank" rel="noopener">HAL Open Science</a>.</em>
 		</p>
 
 		<p>
